# advent-of-code-2022

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  create_day.sh  pyproject.toml  setup.cfg  template.txt  tox.ini
.github/workflows/: lint.yml  test.yml
day_01/: day_01.py
day_02/: day_02.py
src/aoc/: __init__.py  template.py
src/aoc/day_02/: __init__.py
src/aoc22/: __init__.py  run_day.py
src/aoc22/day_01/: __init__.py  day_01.py
src/aoc22/day_02/: day_02.py
src/aoc22/day_03/: __init__.py  day_03.py
src/aoc22/day_04/: __init__.py  day_04.py
src/aoc22/day_05/: __init__.py  day_05.py  input_aux.txt
src/aoc22/day_06/: __init__.py  day_06.py
src/aoc22/day_07/: __init__.py  day_07.py
src/aoc22/day_08/: __init__.py  day_08.py
src/aoc22/day_09/: __init__.py  day_09.py
src/aoc22/day_10/: __init__.py  day_10.py
src/aoc22/day_11/: __init__.py  day_11.py
src/aoc22/day_12/: __init__.py  day_12.py  example.stl  input_to_mesh.py
template/: day_01.py
tests/: fixtures.yml  test_all.py  test_day_01.py  test_day_02.py
