[build-system]
requires = [
  "setuptools>=42",
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
skip-string-normalization = 1

[tool.pylint.'MESSAGES CONTROL']
disable = """
  missing-class-docstring,
  missing-function-docstring,
  missing-module-docstring,
  too-few-public-methods,
"""

[tool.mypy]
exclude = [
  "template",
]
