[metadata]
name = aoc
version = 0.1.0
long_description = file: README.md
long_description_content_type = text/markdown
maintainer = Fernando Perez-Garcia
maintainer_email = fepegar@gmail.com
license = MIT
license_file = LICENSE
platforms = OS Independent
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[options]
install_requires =
    humanize
    numpy
    tqdm
python_requires = >=3.11
include_package_data = True
zip_safe = False

[options.packages.find]
where = src

[options.extras_require]
dev =
    black
    codecov
    coverage
    mypy
    pre-commit
    pytest
    pytest-cov
    tox

[bdist_wheel]
universal = 1

[mypy]
exclude = template.py
