[metadata]
name = aoc22
version = 0.1.0
long_description = file: README.md
long_description_content_type = text/markdown
maintainer = Fernando Perez-Garcia
maintainer_email = fepegar@gmail.com
license = MIT
license_file = LICENSE
platforms = OS Independent
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[options]
install_requires =
    coloredlogs
python_requires = >=3.11
include_package_data = True
zip_safe = False

[options.packages.find]
where = src

[options.extras_require]
dev =
    coverage
    pre-commit
    pytest
    pytest-cov
    tox

[bdist_wheel]
universal = 1

[mypy]
exclude = template/

[mypy-coloredlogs.*]
ignore_missing_imports = True

[tox:tox]
env_list = py311-{pytest,black,mypy,pylint}
isolated_build = True

[testenv]
extras = dev

[testenv:py311-pytest]
description = Run pytest
deps =
    pytest
commands =
    pytest --cov=aoc22 --cov-report=xml

[testenv:py311-black]
description = Run black
deps =
    black
commands =
    black {toxinidir}

[testenv:py311-mypy]
description = Run mypy
deps =
    mypy
commands =
    mypy --install-types --non-interactive {toxinidir}/src --strict

[testenv:py311-pylint]
description = Run pylint
deps =
    pylint
commands =
    pylint {toxinidir}/src
