[metadata]
name = aoc22
version = 0.1.0
long_description = file: README.md
long_description_content_type = text/markdown
maintainer = Fernando Perez-Garcia
maintainer_email = fepegar@gmail.com
license = MIT
license_files = LICENSE
platforms = OS Independent
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython

[options]
install_requires =
    coloredlogs
    matplotlib
    numpy
    numpy-stl
    scikit-image
    typer[all]
python_requires = >=3.10
include_package_data = True
zip_safe = False

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    aocrun=aoc22.run_day:app

[options.extras_require]
dev =
    coverage
    flake8
    mypy
    pre-commit
    pylint
    pytest
    pytest-cov
    tox

[bdist_wheel]
universal = 1

[mypy]
exclude = template/
plugins = numpy.typing.mypy_plugin

[mypy-coloredlogs.*]
ignore_missing_imports = True

[tox:tox]
env_list = py310-{pytest,black,mypy,pylint}
isolated_build = True

[testenv]
extras = dev

[testenv:py310-pytest]
description = Run pytest
deps =
    pytest
commands =
    pytest --cov=aoc22 --cov-report=xml

[testenv:py310-black]
description = Run black
deps =
    black
commands =
    black {toxinidir}

[testenv:py310-mypy]
description = Run mypy
deps =
    mypy
commands =
    mypy --install-types --non-interactive {toxinidir}/src --strict

[testenv:py310-pylint]
description = Run pylint
deps =
    pylint
commands =
    pylint {toxinidir}/src
